fix: normalizar direction dos containers e melhorar contraste dos logs

--- a/src/ui.html
+++ b/src/ui.html
@@ -338,9 +338,9 @@
       border: 1px solid var(--color-border);
       border-radius: var(--radius);
       padding: 10px;
-      background: #f8fafc;
+      background: var(--color-panel);
       font-size: 12px;
-      color: var(--color-text-secondary);
+      color: var(--color-text);
       overflow-y: auto;
     }
 
