--- a/src/ui.html
+++ b/src/ui.html
@@ -641,6 +641,11 @@
             </div>
             <div id="gpt-status" class="status"></div>
           </div>
+
+          <label class="checkbox">
+            <input id="auto_fix_layout" type="checkbox" />
+            <span>Corre&#231;&#227;o autom&#225;tica de layout (fallback flex column)</span>
+          </label>
         </div>
       </section>
 
@@ -717,6 +722,7 @@
         gemini_model: document.getElementById('gemini_model'),
         gpt_api_key: document.getElementById('gpt_api_key'),
         gpt_model: document.getElementById('gpt_model'),
+        auto_fix_layout: document.getElementById('auto_fix_layout'),
         wp_url: document.getElementById('wp_url'),
         wp_user: document.getElementById('wp_user'),
         wp_token: document.getElementById('wp_token'),
@@ -807,6 +813,7 @@
         }
         if (fields.gpt_api_key) fields.gpt_api_key.value = payload.gptKey || '';
         if (fields.gpt_model && payload.gptModel) fields.gpt_model.value = payload.gptModel;
+        if (fields.auto_fix_layout) fields.auto_fix_layout.checked = !!payload.autoFixLayout;
         if (fields.wp_url) fields.wp_url.value = payload.wpUrl || '';
         if (fields.wp_user) fields.wp_user.value = payload.wpUser || '';
         if (fields.wp_token) fields.wp_token.value = payload.wpToken || '';
@@ -833,6 +840,7 @@
         }
         if (fields.gpt_api_key) fields.gpt_api_key.addEventListener('input', saveText('gptApiKey', fields.gpt_api_key));
         if (fields.gpt_model) fields.gpt_model.addEventListener('change', () => send('save-setting', { key: 'gptModel', value: fields.gpt_model.value }));
+        if (fields.auto_fix_layout) fields.auto_fix_layout.addEventListener('change', () => send('save-setting', { key: 'auto_fix_layout', value: fields.auto_fix_layout.checked }));
         if (fields.wp_url) fields.wp_url.addEventListener('input', saveText('gptel_wp_url', fields.wp_url));
         if (fields.wp_user) fields.wp_user.addEventListener('input', saveText('gptel_wp_user', fields.wp_user));
         if (fields.wp_token) fields.wp_token.addEventListener('input', saveText('gptel_wp_token', fields.wp_token));
