fix: frames trancados como imagens, upload WP condicional e UI readonly

--- a/src/ui.html
+++ b/src/ui.html
@@ -603,11 +603,14 @@
           <textarea id="output" placeholder="O JSON gerado aparecer&#225; aqui"></textarea>
           <div id="logs" class="logs"></div>
           <div style="margin-top:12px;">
-            <label style="display:block;font-size:12px;margin-bottom:6px;">JSON gerado (selecionamos automaticamente; se precisar use Ctrl+C):</label>
-            <textarea id="figma-json-output" style="width:100%;height:200px" placeholder="JSON para copiar/colar no Elementor"></textarea>
+            <label style="display:block;font-size:12px;margin-bottom:6px;">JSON gerado (selecionamos automaticamente; se
+              precisar use Ctrl+C):</label>
+            <textarea id="figma-json-output" style="width:100%;height:200px"
+              placeholder="JSON para copiar/colar no Elementor" readonly></textarea>
             <div style="display:flex;gap:8px;margin-top:8px;align-items:center;">
               <button class="btn secondary" id="copy-manual">Copiar JSON</button>
-              <span style="font-size:12px;color:#999;">Se o navegador bloquear, selecione o campo e pressione Ctrl+C.</span>
+              <span style="font-size:12px;color:#999;">Se o navegador bloquear, selecione o campo e pressione
+                Ctrl+C.</span>
             </div>
           </div>
         </div>
@@ -627,37 +630,37 @@
           </select>
 
           <div id="ai_settings">
-          <div class="provider-block provider-gemini">
-            <label class="input-label" for="gemini_api_key">Gemini API Key</label>
-            <input id="gemini_api_key" type="password" autocomplete="off" placeholder="Cole sua API Key do Gemini" />
-            <label class="input-label" for="gemini_model">Modelo</label>
-            <select id="gemini_model">
-              <option value="gemini-2.0-flash-exp">gemini-2.0-flash-exp (Experimental)</option>
-              <option value="gemini-1.5-pro-002">gemini-1.5-pro-002 (Stable)</option>
-              <option value="gemini-1.5-flash-002">gemini-1.5-flash-002 (Fast & Stable)</option>
-            </select>
-            <div class="actions">
-              <button class="btn primary" data-action="test-gemini">Testar conex&#227;o</button>
+            <div class="provider-block provider-gemini">
+              <label class="input-label" for="gemini_api_key">Gemini API Key</label>
+              <input id="gemini_api_key" type="password" autocomplete="off" placeholder="Cole sua API Key do Gemini" />
+              <label class="input-label" for="gemini_model">Modelo</label>
+              <select id="gemini_model">
+                <option value="gemini-2.0-flash-exp">gemini-2.0-flash-exp (Experimental)</option>
+                <option value="gemini-1.5-pro-002">gemini-1.5-pro-002 (Stable)</option>
+                <option value="gemini-1.5-flash-002">gemini-1.5-flash-002 (Fast & Stable)</option>
+              </select>
+              <div class="actions">
+                <button class="btn primary" data-action="test-gemini">Testar conex&#227;o</button>
+              </div>
+              <div id="gemini-status" class="status"></div>
             </div>
-            <div id="gemini-status" class="status"></div>
-          </div>
 
-          <div class="provider-block provider-gpt">
-            <label class="input-label" for="gpt_api_key">OpenAI API Key</label>
-            <input id="gpt_api_key" type="password" autocomplete="off" placeholder="Cole sua chave da OpenAI" />
-            <label class="input-label" for="gpt_model">Modelo GPT</label>
-            <select id="gpt_model">
-              <option value="gpt-4.1-mini">gpt-4.1-mini (recomendado)</option>
-              <option value="gpt-4.1">gpt-4.1</option>
-              <option value="gpt-4.1-preview">gpt-4.1-preview</option>
-              <option value="gpt-o1">gpt-o1</option>
-              <option value="gpt-o3-mini">gpt-o3-mini</option>
-            </select>
-            <div class="actions">
-              <button class="btn primary" data-action="test-gpt">Testar conex&#227;o GPT</button>
+            <div class="provider-block provider-gpt">
+              <label class="input-label" for="gpt_api_key">OpenAI API Key</label>
+              <input id="gpt_api_key" type="password" autocomplete="off" placeholder="Cole sua chave da OpenAI" />
+              <label class="input-label" for="gpt_model">Modelo GPT</label>
+              <select id="gpt_model">
+                <option value="gpt-4.1-mini">gpt-4.1-mini (recomendado)</option>
+                <option value="gpt-4.1">gpt-4.1</option>
+                <option value="gpt-4.1-preview">gpt-4.1-preview</option>
+                <option value="gpt-o1">gpt-o1</option>
+                <option value="gpt-o3-mini">gpt-o3-mini</option>
+              </select>
+              <div class="actions">
+                <button class="btn primary" data-action="test-gpt">Testar conex&#227;o GPT</button>
+              </div>
+              <div id="gpt-status" class="status"></div>
             </div>
-            <div id="gpt-status" class="status"></div>
-          </div>
           </div>
           <label class="checkbox">
             <input id="auto_fix_layout" type="checkbox" />
@@ -676,7 +679,8 @@
           <input id="wp_user" type="text" autocomplete="username" placeholder="usu&#225;rio" />
 
           <label class="input-label" for="wp_token">Senha do App (Token)</label>
-          <input id="wp_token" type="password" autocomplete="current-password" placeholder="Senha de aplica&#231;&#227;o do WP" />
+          <input id="wp_token" type="password" autocomplete="current-password"
+            placeholder="Senha de aplica&#231;&#227;o do WP" />
 
           <label class="checkbox">
             <input id="wp_export_images" type="checkbox" />
@@ -900,7 +904,7 @@
         if (fields.wp_create_page) fields.wp_create_page.addEventListener('change', () => send('save-setting', { key: 'gptel_auto_page', value: fields.wp_create_page.checked }));
       }
 
-            function bindActions() {
+      function bindActions() {
         document.querySelectorAll('[data-action]').forEach(btn => {
           btn.addEventListener('click', () => {
             if (btn.disabled && ['copy-json', 'download-json', 'export-wp'].includes(btn.getAttribute('data-action') || '')) {
@@ -1187,13 +1191,3 @@
 </body>
 
 </html>
-
-
-
-
-
-
-
-
-
-
