fix: ui output readonly and docs update

--- a/src/ui.html
+++ b/src/ui.html
@@ -600,7 +600,7 @@
             <div class="progress-bar"></div>
             <span class="progress-text">Processando pipeline...</span>
           </div>
-          <textarea id="output" placeholder="O JSON gerado aparecer&#225; aqui"></textarea>
+          <textarea id="output" placeholder="O JSON gerado aparecer&#225; aqui" readonly></textarea>
           <div id="logs" class="logs"></div>
           <div style="margin-top:12px;">
             <label style="display:block;font-size:12px;margin-bottom:6px;">JSON gerado (selecionamos automaticamente; se
