--- a/src/ui.html
+++ b/src/ui.html
@@ -606,7 +606,7 @@
             <label style="display:block;font-size:12px;margin-bottom:6px;">JSON gerado (selecionamos automaticamente; se
               precisar use Ctrl+C):</label>
             <textarea id="figma-json-output" style="width:100%;height:200px"
-              placeholder="JSON para copiar/colar no Elementor" readonly></textarea>
+              placeholder="JSON para copiar/colar no Elementor"></textarea>
             <div style="display:flex;gap:8px;margin-top:8px;align-items:center;">
               <button class="btn secondary" id="copy-manual">Copiar JSON</button>
               <span style="font-size:12px;color:#999;">Se o navegador bloquear, selecione o campo e pressione
